# Ruxer

./: .env.example  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
.firecrawl/: autosel.json  perm.json  ss1.json  ss2.json  ss3.json  ss4.json  tauri12732.md
.github/: dependabot.yml
.github/workflows/: release.yml
build-gui/src-tauri/: Cargo.toml  tauri.conf.json
build-gui/src-tauri/capabilities/: default.json
build-gui/src-tauri/src/: builder.rs  lib.rs  main.rs  publisher.rs  repo.rs  zipper.rs
build-gui/web/: index.html  main.js
capture-codec/: Cargo.toml
capture-codec/src/: lib.rs
core/: Cargo.toml  build.rs  openapi.json
core/src/: auth.rs  client.rs  discovery.rs  error.rs  gateway.rs  http.rs  lib.rs  models.rs  ratelimit.rs
core/src/api/: channels.rs  discovery.rs  gifs.rs  guilds.rs  invites.rs  messages.rs  mod.rs  reactions.rs  reports.rs  search.rs  users.rs
docs/: design-system-extracted.md  open-questions.md  parity-audit.md  parity-gaps.md
examples/: basic.rs
memory/: MEMORY.md  fluxer-build-speed.md  fluxer-screenshare-perf.md  fluxer-ui-migration.md
native-vendor/encoder-ring/: Cargo.toml  build.rs
native-vendor/encoder-ring/src/: amf.rs  backend.rs  d3d11.rs  encoder_handoff.rs  lib.rs  metal_iosurface.rs  metal_iosurface_macos.rs  nvenc.rs  qsv.rs  ring.rs  vt_compression_macos.rs
native-vendor/gpu-rebuild/: Cargo.toml
native-vendor/gpu-rebuild/src/: lib.rs
native-vendor/linux-screen-capture/: Cargo.toml  THIRD_PARTY_OBS_VKCAPTURE.md  index.d.ts  index.js  index.test.mjs  package.json
native-vendor/linux-screen-capture/src/: capture_state.rs  frame_buffer_pool.rs  game_capture.rs  gpu_loss.rs  lib.rs  linux_surface.rs  nv12_packing.rs  pipewire_stream.rs  portal.rs  stub_surface.rs
native-vendor/screen-frame-bus/: Cargo.toml
native-vendor/screen-frame-bus/src/: frame_pool.rs  gpu_loss.rs  lib.rs
native-vendor/win-game-capture/: Cargo.toml  compatibility.json  index.d.ts  index.js  index.test.mjs  loader-diagnostics.cjs  package.json
native-vendor/win-game-capture/hook/: Cargo.toml
native-vendor/win-game-capture/hook/src/: arm64_reloc.rs  d3d9.rs  gl_interop.rs  inline_hook.rs  lib.rs
native-vendor/win-game-capture/hook/tests/: arm64_reloc.rs
native-vendor/win-game-capture/inject-helper/: Cargo.toml
native-vendor/win-game-capture/inject-helper/src/: main.rs
native-vendor/win-game-capture/scripts/: fixture-smoke.mjs
native-vendor/win-game-capture/src/: compatibility.rs  dxgi_capture.rs  encoder_attach.rs  fallback.rs  game_capture.rs  game_capture_abi.rs  gpu_priority.rs  hdr.rs  lib.rs  nv12_gpu.rs  sources.rs  vulkan_layer_registry.rs  wgc_capture.rs
native-vendor/win-game-capture/test-apps/d3d10-present-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/d3d11-present-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/d3d12-present-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/d3d9-present-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/i686-present-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/opengl-swapbuffers-fixture/: Cargo.toml
native-vendor/win-game-capture/test-apps/vulkan-present-fixture/: Cargo.toml
native-vendor/win-game-capture/vulkan-layer/: Cargo.toml
native-vendor/win-game-capture/vulkan-layer/src/: d3d11_interop.rs  lib.rs
reference/fluxer/: pnpm-lock.yaml  pnpm-workspace.yaml
reference/fluxer/fluxer_app/: index.html  package.json  rspack.config.mjs
scripts/: check-cache.ps1  check-cache.sh  maybe-rebuild-frontend.mjs
src-tauri/: Cargo.toml  bootstrap-template.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  desktop_bridge.rs  gateway.rs  image.rs  lib.rs  log_forward.rs  main.rs  media_cache.rs  models.rs  proxy.rs  screen_sources.rs  secure_storage.rs  sound.rs  telemetry.rs  ui_editor.rs  voice_engine.rs  voice_engine_events.rs
voice-native/: Cargo.toml
voice-native/src/: camera.rs  lib.rs  screen.rs  video.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  emoji-data.ts  i18n.ts  keybinds.ts  main.tsx  sounds.ts  stores.ts  theme.css  types.ts  utils.ts  vite-env.d.ts
web/src/components/: AudioPlayer.css  AudioPlayer.tsx  Avatar.css  Avatar.tsx  Badge.css  Badge.tsx  BanMemberModal.css  BanMemberModal.tsx  Button.css  Button.tsx  ChannelSettingsModal.css  ChannelSettingsModal.tsx  Composer.css  Composer.tsx  ContentRenderer.css  ContentRenderer.tsx  ContextMenu.css  ContextMenu.tsx  CreateJoinGuildModal.css  CreateJoinGuildModal.tsx  EditingMessageInput.css  EditingMessageInput.tsx  EmbedList.css  EmbedList.tsx  EmojiPicker.css  EmojiPicker.tsx  ErrorBoundary.tsx  ForwardModal.css  ForwardModal.tsx  GifPicker.css  GifPicker.tsx  GuildIcon.tsx  GuildSettingsModal.css  GuildSettingsModal.tsx  ImageViewer.css  ImageViewer.tsx  IncomingCallOverlay.css  IncomingCallOverlay.tsx  InviteEmbed.css  InviteEmbed.tsx  (+39 more)
web/src/dev/: devScenes.ts  mockTauri.ts
web/src/editor/: LayoutEngine.ts  LuaBridge.ts  UiEditorGate.tsx  UiEditorPanel.css  UiEditorPanel.tsx
web/src/layout/: AppLayout.css  AppLayout.tsx  BookmarksPopout.css  BookmarksPopout.tsx  ChannelList.css  ChannelList.tsx  ChannelSidebar.css  ChannelSidebar.tsx  DmList.css  DmList.tsx  GuildsRail.css  GuildsRail.tsx  MainContent.css  MainContent.tsx  MemberList.css  MemberList.tsx  PinsPane.css  PinsPane.tsx  ScheduledPane.css  ScheduledPane.tsx  TitleBar.css  TitleBar.tsx  UserArea.css  UserArea.tsx
web/src/styles/: tokens.css
web/src/utils/: emojiResolve.ts  mediaCache.ts  permissions.ts  spoilers.ts  timestamp.ts  totp.ts
web/src/views/: ChannelHeader.css  ChannelHeader.tsx  DiscoveryView.css  DiscoveryView.tsx  DmEmptyState.css  DmEmptyState.tsx  FriendsView.css  FriendsView.tsx  LoginView.css  LoginView.tsx  MessageStream.css  MessageStream.tsx
web/src/voice/: LiveKitRoom.ts
web/src/window/: documentTitle.tsx
(+85 files in other folders)
