[package]
name = "fluxer_encoder_ring"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]}
libloading = "0.9"

[build-dependencies]
bindgen = {version = "0.72", optional = true}

[features]
default = []
bindgen-sdk = ["dep:bindgen"]
