[package]
name = "fluxer_linux_screen_capture"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wgpu = ["dep:wgpu", "fluxer_gpu_rebuild/wgpu"]

[dependencies]
parking_lot = "0.12"
fluxer_screen_frame_bus = { path = "../screen-frame-bus" }
fluxer_gpu_rebuild = { path = "../gpu-rebuild" }
wgpu = { version = "29", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
async-io = "2.6.0"
dcv-color-primitives = "1.0"
futures-lite = "2.6.1"
libc = "0.2"
# v0_3_65, NOT v0_3_33: pipewire-rs 0.10's libspa lib.rs unconditionally calls
# spa_meta_region_is_valid / reads spa_video_info_raw.flags, symbols that
# libspa-sys only emits under the v0_3_65+ feature. Building with v0_3_33 fails
# with `cannot find function spa_meta_region_is_valid in crate spa_sys`. The CI
# runner (and any modern distro) has libpipewire >= 0.3.65, so requesting the
# higher API surface is safe.
pipewire = { version = "0.10.0", features = ["v0_3_65"] }
zbus = "5.16.0"
